personal-web-site/resume-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-web
  namespace: personal-web-site
  labels:
    app: resume-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-web
  template:
    metadata:
      labels:
        app: resume-web
    spec:
      containers:
        - name: resume-web
          image: wololoaeyoyo/humberto-resume:master
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
